fixed size on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,18 @@ header span {
     -webkit-justify-content: space-between;
 }
 
+.tech_summary{
+    padding-top: 10px;
+    font-size: 1em;
+    text-align: center;
+}
+
+.proj_summary{
+    padding: 25px;
+    font-size: 1em;
+    text-align: center;
+}
+
 #PHP,
 #C,
 #Java {
